--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.7.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-notifications-menu": "^1.0.6",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
