--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
     "bootstrap-switch-button-react": "^1.2.0",
+    "jwt-decode": "^3.1.2",
     "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.1",
+    "react-cookie": "^4.1.1",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-notifications-menu": "^1.0.6",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.1",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
     "redux": "^4.2.1",
