--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-moment": "^1.1.3",
     "react-notifications-menu": "^1.0.6",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
