--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-select": "^5.7.0",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
+    "redux-persist-transform-filter": "^0.0.22",
     "sass": "^1.58.0",
     "web-vitals": "^2.1.4"
   },
