--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "jwt-decode": "^3.1.2",
     "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.1",
+    "react-bootstrap": "^2.7.2",
     "react-cookie": "^4.1.1",
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-moment": "^1.1.3",
+    "react-notifications": "^1.7.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
