--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
+    "recharts": "^2.5.0",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "redux-persist-transform-filter": "^0.0.22",
